--- a/cmd.info.numeric.MultiOuvrants.html
+++ b/cmd.info.numeric.MultiOuvrants.html
@@ -1,3 +1,6 @@
+<!-- volet1 // volet2 // volet3 // volet4 // volet5 // volet6// volet7 // volet 8 // volet9 // velux1 // velux2 // velux // rideau1 // rideau2 
+// store1 // portail1 // garage1 -->
+
 <div style="min-width:100px; min-height:100px;" class="cmd tooltips cmd-widget cursor container-fluid #history# #displayHistory#" data-type="info" data-subtype="numeric" data-cmd_id="#id#" data-cmd_uid="#uid#">
 	<center>
 		<span style="font-weight: bold;font-size:12px;#hideCmdName#">#name_display#</span>
